--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -23,7 +23,7 @@
         </select>
 
         <label>Language</label>
-        <input type="text" name="language" value="en" required>
+        <input type="text" name="language" required>
 
         <label>Instruction / Study</label>
         <select name="instruction">
